--- a/main/pom.xml
+++ b/main/pom.xml
@@ -33,6 +33,13 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<!-- network layer -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>mmo-engine-game-network-layer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- CLI -->
 		<dependency>
 			<groupId>com.jukusoft</groupId>
