fixed some problems with deployment, parent module is required to use shared-commons-library.

--- a/application-layer/pom.xml
+++ b/application-layer/pom.xml
@@ -11,6 +11,11 @@
 
 	<artifactId>mmo-engine-client-application-layer</artifactId>
 
+	<properties>
+		<!-- don't deploy all modules to maven central, only shared-commons-library -->
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
+
 	<dependencies>
 		<!-- High Performance Primitive Collections for Java, https://github.com/carrotsearch/hppc -->
 		<dependency>
