--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -13,6 +13,9 @@
 
 	<properties>
 		<mainClass>com.jukusoft.mmo.engine.desktop.DesktopLauncher</mainClass>
+
+		<!-- don't deploy all modules to maven central, only shared-commons-library -->
+		<maven.deploy.skip>true</maven.deploy.skip>
 	</properties>
 
 	<dependencies>
