--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,8 @@
 		<js.rhino.version>1.7.10</js.rhino.version>
 
 		<!-- don't deploy all modules to maven central, only shared-commons-library -->
-		<maven.deploy.skip>true</maven.deploy.skip>
+		<!-- <maven.deploy.skip>true</maven.deploy.skip> -->
+		<maven.deploy.skip>false</maven.deploy.skip>
 
 		<!-- format maven build timestamp to add to manifest -->
 		<timestamp>${maven.build.timestamp}</timestamp>
