--- a/shared-library/pom.xml
+++ b/shared-library/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<!-- don't skip this module, instead deploy this module to maven central -->
 		<maven.deploy.skip>false</maven.deploy.skip>
+		<maven.deploy.uniqueVersion>false</maven.deploy.uniqueVersion>
 	</properties>
 
 	<dependencies>
