changed maven configuration, avoid unique snapshot versions with timestamp.

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<snapshotRepository>
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
