--- a/shared-library/pom.xml
+++ b/shared-library/pom.xml
@@ -46,6 +46,13 @@
 			<version>${org.json.version}</version>
 		</dependency>
 
+		<!-- vert.x binary serializer -->
+		<dependency>
+			<groupId>com.jukusoft</groupId>
+			<artifactId>vertx-binary-serializer</artifactId>
+			<version>${vertx.serializer.version}</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
 		<dependency>
 			<groupId>org.mozilla</groupId>
