--- a/data/init/graphics.ini
+++ b/data/init/graphics.ini
@@ -5,3 +5,15 @@ logo={data.dir}misc/wallpaper/600x235.png
 [UISkin]
 atlas={data.dir}misc/skins/default/uiskin.atlas
 json={data.dir}misc/skins/default/uiskin.json
+
+[SelectCharacter]
+background=data/misc/placeholders/1280x720.png
+logo=data/misc/placeholders/600x235.png
+slotBackground=data/misc/placeholders/slot_bg.png
+slotBackgroundHover=data/misc/placeholders/slot_bg_hovered.png
+newSlot=data/misc/placeholders/new_slot.png
+newSlotHover=data/misc/placeholders/new_slot_hover.png
+
+[CreateCharacter]
+background=data/misc/placeholders/1280x720.png
+newCharacterBackground=data/misc/placeholders/new_character_bg.png
