--- a/data/init/graphics.ini
+++ b/data/init/graphics.ini
@@ -15,5 +15,5 @@ newSlot=data/misc/placeholders/new_slot.png
 newSlotHover=data/misc/placeholders/new_slot_hover.png
 
 [CreateCharacter]
-background=data/misc/placeholders/1280x720.png
-newCharacterBackground=data/misc/placeholders/new_character_bg.png
+background={data.dir}misc/wallpaper/1280x720.png
+newCharacterBackground={data.dir}misc/placeholders/new_character_bg.png
