added new screen LoadRegionScreen.

--- a/data/init/graphics.ini
+++ b/data/init/graphics.ini
@@ -17,3 +17,8 @@ newSlotHover=data/misc/placeholders/new_slot_hover.png
 [CreateCharacter]
 background={data.dir}misc/wallpaper/1280x720.png
 newCharacterBackground={data.dir}misc/placeholders/new_character_bg.png
+
+[LoadRegion]
+background={data.dir}misc/placeholders/loading_region.png
+json={data.dir}misc/skins/default/uiskin.json
+textureAtlas={temp.dir}assets/loading/loading.pack.atlas
