added class FileChecker to check file checksum of cached region files.

--- a/config/game.cfg
+++ b/config/game.cfg
@@ -1,7 +1,7 @@
 [Paths]
 dataDir=./data/
 configDir={user.home}config/;{data.dir}init/;{data.dir}config/;{user.home}.pentaquin/config/
-tempDir={java.io.tmpdir}/.pentaquin/temp/
+tempDir={java.io.tmpdir}.pentaquin/temp/
 
 [Error]
 windowTitle=Pentaquin MMO - Error
