added parser for tsx files.

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,9 @@
 		<!-- dom4j parser to parse .tmx tiled format -->
 		<dom4j.version>2.1.1</dom4j.version>
 
+		<!-- jaxen version for dom4j (to avoid exception) -->
+		<jaxen.version>1.1.6</jaxen.version>
+
 		<!-- don't deploy all modules to maven central, only shared-commons-library -->
 		<!-- <maven.deploy.skip>true</maven.deploy.skip> -->
 		<maven.deploy.skip>false</maven.deploy.skip>
