--- a/data/init/renderer.ini
+++ b/data/init/renderer.ini
@@ -2,4 +2,9 @@
 ; update visible map state every 5 frames (if new maps are visible, then they are loaded)
 ; in other words: how many frames should be skipped before renderer is checking for new visible maps?
 ; Attention! This can affect performance drastically!
-update_visible_maps_every_x_frames=5
+update_visible_maps_every_x_frames=10
+
+; additional padding which is added to camera at all sides to check, if map is visible or will be visible in next time
+; to find visible maps to load / unload
+; Attention! This can affect performance drastically!
+update_visible_maps_camera_border_padding=200
