added support to reload config with client command interface, closed #32 .

--- a/data/init/renderer.ini
+++ b/data/init/renderer.ini
@@ -8,3 +8,12 @@ update_visible_maps_every_x_frames=10
 ; to find visible maps to load / unload
 ; Attention! This can affect performance drastically!
 update_visible_maps_camera_border_padding=200
+
+; option if tmx map renderer should use paging to merge multiple layers which belongs to one floor together
+; with a framebuffer and cache this result in a texture to render
+; Attention! This can affect performance drastically!
+paging_enabled=true
+
+; page sizes
+page_width=512
+page_height=512
