added support to find visible pages.

--- a/data/init/renderer.ini
+++ b/data/init/renderer.ini
@@ -17,3 +17,13 @@ paging_enabled=true
 ; page sizes
 page_width=512
 page_height=512
+
+; update visible pages state every 10 frames (if new pages are visible, then they are loaded, if neccessary)
+; in other words: how many frames (-1) should be skipped before renderer is checking for new visible pages?
+; Attention! This can affect performance drastically!
+update_visible_pages_every_x_frames=10
+
+; additional padding which is added to camera at all sides to check, if page is visible or will be visible in next time
+; to find visible pages to load / unload
+; Attention! This can affect performance drastically!
+update_visible_pages_camera_border_padding=200
